going do homework now

--- a/shamir.ipynb
+++ b/shamir.ipynb
@@ -98,6 +98,7 @@
     }
    ],
    "source": [
+    "# Using this library because Python/Numpy by default does not support high precision floats.\n",
     "from decimal import *\n",
     "import decimal\n",
     "import math\n",
@@ -373,10 +374,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# this seems to be a system of 3 linear equations with 5 integer variables (p,q,r,s,t), \n",
+    "# with coeffecient (x_n**k) non-integer\n",
+    "# p*x1**4 + q*x1**3 + r*x1**2 + s*x1 + t = y1\n",
+    "# p*x2**4 + q*x2**3 + r*x2**2 + s*x2 + t = y2\n",
+    "# p*x3**4 + q*x3**3 + r*x3**2 + s*x3 + t = y3"
+   ]
   },
   {
    "cell_type": "code",
